--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 
- * {
-   box-sizing: border-box;
+* {
+  box-sizing: border-box;
+}
 
- }
 body {
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+  font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   overflow: hidden;
+  margin: 0;
 }
 
-.container{
+.container {
   display: flex;
   width: 90vw;
 }
 
-.panel{
-  background-size: auto 100%;
+.panel {
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   height: 80vh;
@@ -30,10 +30,10 @@ body {
   flex: 0.5;
   margin: 10px;
   position: relative;
-  transition: flex 0.7s ease-in;
+  -webkit-transition: all 700ms ease-in;
 }
 
-.panel h3{
+.panel h3 {
   font-size: 24px;
   position: absolute;
   bottom: 20px;
@@ -42,7 +42,7 @@ body {
   opacity: 0;
 }
 
-.panel.active{
+.panel.active {
   flex: 5;
 }
 
